--- a/index.html
+++ b/index.html
@@ -1,43 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>As.UP by asupdev</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>As.UP</h1>
-        <p>As.UP Project</p>
+        <h2>As.UP Project</h2>
 
-        <p class="view"><a href="https://github.com/asupdev/asup">View the Project on GitHub <small>asupdev/asup</small></a></p>
+        <section id="downloads">
+          <a href="https://github.com/asupdev/asup/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/asupdev/asup/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/asupdev/asup" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-        <ul>
-          <li><a href="https://github.com/asupdev/asup/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/asupdev/asup/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/asupdev/asup">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+    <div class="container">
+      <section id="main_content">
         <p>Welcome to As.UP Project..</p>
 
 <p>// TODO</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/asupdev">asupdev</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
